<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyGoal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/UpAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            app:backgroundTint="@color/colorBottomAppBar"
            app:menu="@menu/upper_navigation"
            tools:ignore="BottomAppBar"/>
        
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:text="@string/MyGoalCalendar"
            android:textSize="@dimen/AppNameDimen"/>

        <LinearLayout
            android:padding="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/colorBottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/Prev"
                android:contentDescription="@string/Prev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:src="@drawable/prev"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"/>
            <ImageView
                android:id="@+id/Next"
                android:contentDescription="@string/Next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:src="@drawable/next"/>
        </LinearLayout>
        <LinearLayout
            android:background="@color/colorBottomAppBar"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/MainLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/item_background">
            <TextView
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/roboto_bold"
                android:textSize="@dimen/GoalNameDimen"
                android:text="@string/WriteMotivationWord" />
            <TextView
                android:id="@+id/EditQuote"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/roboto_bold"
                android:textSize="@dimen/GoalQuoteDimen"
                android:hint="@string/NotHaveQuoteNote"
                android:textColorHint="@color/colorTransparentBlack"/>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/item_background">
            <TextView
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/roboto_bold"
                android:textSize="@dimen/GoalNameDimen"
                android:text="@string/WriteGoalNote" />
            <TextView
                android:id="@+id/EditNote"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/roboto_bold"
                android:textSize="@dimen/GoalQuoteDimen"
                android:hint="@string/NotHaveNote"
                android:textColorHint="@color/colorTransparentBlack"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textAlignment="center"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/EditTimeReminder"
                android:textSize="@dimen/AddGoalTextsSize"
                android:padding="5dp"
                android:background="@drawable/item_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ExampleTime"
                android:textColor="@color/colorBlack" />
            <CheckBox
                android:id="@+id/EditNotification"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RemindMe"
                android:textSize="@dimen/GoalQuoteDimen"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>