<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_marginTop="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_background"
    android:padding="10dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textAlignment="center"
        android:gravity="center_horizontal">
        <ImageView
            android:id="@+id/MainGoalIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_sport"
            android:contentDescription="@string/Image"/>
        <ImageView
            android:id="@+id/TaskStatus"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/task_not_completed"
            android:contentDescription="@string/Image"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/MainGoalName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/GoalNameUpperCase"
            style="@style/GoalNameTextAppearance"/>
        <TextView
            android:id="@+id/MainGoalQuote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ExampleOfAQuote"
            style="@style/GoalQuoteTextAppearance"/>
    </LinearLayout>

</LinearLayout>